--- a/Classes/roamer/CustomizeRoad/RoadMap/RoadMapViewController.xib
+++ b/Classes/roamer/CustomizeRoad/RoadMap/RoadMapViewController.xib
@@ -23,7 +23,7 @@
                     <items>
                         <barButtonItem style="plain" id="VPC-hr-aSa">
                             <segmentedControl key="customView" opaque="NO" tag="55" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="bar" id="MAV-dk-DaV">
-                                <rect key="frame" x="16" y="7" width="110" height="30"/>
+                                <rect key="frame" x="16" y="7" width="90" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="" image="line"/>
@@ -93,9 +93,10 @@
                                 </state>
                             </button>
                         </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="qaB-yB-D32"/>
                         <barButtonItem style="plain" id="omH-zO-gsc">
                             <button key="customView" opaque="NO" tag="60" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7ez-B8-PUd" userLabel="Exit Button">
-                                <rect key="frame" x="566" y="12" width="18" height="18"/>
+                                <rect key="frame" x="554" y="7" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="exit"/>
                                 <state key="disabled" image="exit"/>
