增加我的出行里面 记录 envelope 的功能

--- a/Classes/roamer/VCs/iLiveTrafficMapViewController.xib
+++ b/Classes/roamer/VCs/iLiveTrafficMapViewController.xib
@@ -113,12 +113,12 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apF-Fn-cSo" userLabel="Button-定制">
-                    <rect key="frame" x="552" y="206" width="48" height="48"/>
+                    <rect key="frame" x="534" y="206" width="61" height="48"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="7SU-uB-IJC"/>
+                        <constraint firstAttribute="width" constant="61" id="7SU-uB-IJC"/>
                         <constraint firstAttribute="height" constant="48" id="7mQ-61-ZcM"/>
                     </constraints>
-                    <state key="normal" title="定制">
+                    <state key="normal" title="我的出行">
                         <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -205,7 +205,7 @@
                 <constraint firstItem="OD4-4k-535" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="j52-uP-m2x"/>
                 <constraint firstItem="56" firstAttribute="leading" secondItem="OD4-4k-535" secondAttribute="trailing" constant="16" id="jJ9-Kt-YvQ"/>
                 <constraint firstItem="kVe-TT-2bV" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="kQ9-Qj-g0X"/>
-                <constraint firstAttribute="trailing" secondItem="apF-Fn-cSo" secondAttribute="trailing" id="oJU-RI-mSm"/>
+                <constraint firstAttribute="trailing" secondItem="apF-Fn-cSo" secondAttribute="trailing" constant="5" id="oJU-RI-mSm"/>
                 <constraint firstItem="56" firstAttribute="top" secondItem="1" secondAttribute="top" constant="62" id="ogs-Jh-7LJ"/>
                 <constraint firstItem="pcK-ba-NMt" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="pZ6-Pc-U6f"/>
                 <constraint firstItem="nwT-gR-UM2" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="wb1-nW-JzH"/>
