--- a/Classes/roamer/CustomizeRoad/RoadMap/RoadMapViewController.xib
+++ b/Classes/roamer/CustomizeRoad/RoadMap/RoadMapViewController.xib
@@ -7,6 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RoadMapViewController">
             <connections>
+                <outlet property="cityCongestDescLabel" destination="xUN-Rc-JPP" id="drp-cb-eTW"/>
+                <outlet property="cityCongestLabel" destination="hlD-00-K0x" id="12c-Dm-Y81"/>
                 <outlet property="mapView" destination="OpY-im-BQE" id="QQ9-Py-03L"/>
                 <outlet property="toolbar" destination="cIg-AL-IcJ" id="4C0-Mp-B8e"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -17,9 +19,17 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OpY-im-BQE" userLabel="View-地图" customClass="AGSMapView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
                 <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIg-AL-IcJ">
-                    <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                    <rect key="frame" x="0.0" y="555" width="600" height="44"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="68z-Sl-QDR"/>
+                        <constraint firstAttribute="height" constant="44" id="zkZ-Iq-nKE"/>
+                    </constraints>
                     <items>
                         <barButtonItem style="plain" id="VPC-hr-aSa">
                             <segmentedControl key="customView" opaque="NO" tag="55" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="bar" id="MAV-dk-DaV">
@@ -103,42 +113,67 @@
                             </button>
                         </barButtonItem>
                     </items>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="zkZ-Iq-nKE"/>
+                        </mask>
+                    </variation>
                 </toolbar>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OpY-im-BQE" userLabel="View-地图" customClass="AGSMapView">
-                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qR9-bU-x8G">
-                    <rect key="frame" x="552" y="552" width="48" height="48"/>
+                <view autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rNF-Ah-hun" userLabel="View-指数区域背景">
+                    <rect key="frame" x="0.0" y="500" width="100" height="100"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="c7v-LF-9JB"/>
-                        <constraint firstAttribute="height" constant="48" id="gPe-Po-uk2"/>
+                        <constraint firstAttribute="height" constant="100" id="Nnr-0L-m9a"/>
+                        <constraint firstAttribute="width" constant="100" id="Wop-kR-Hgr"/>
                     </constraints>
-                    <state key="normal" backgroundImage="OnStateButtonImage">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="shareMenuBtnClicked:" destination="-1" eventType="touchUpInside" id="ZDj-Jm-POT"/>
-                    </connections>
-                </button>
+                </view>
+                <label autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="bottom" text="0.0" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlD-00-K0x" userLabel="Label-全市拥堵指数">
+                    <rect key="frame" x="0.0" y="537" width="89" height="55"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <accessibility key="accessibilityConfiguration">
+                        <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
+                        <bool key="isElement" value="NO"/>
+                    </accessibility>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="89" id="0MK-U7-QXw"/>
+                        <constraint firstAttribute="height" constant="55" id="fyp-pf-IwG"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="64"/>
+                    <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="拥堵情况" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xUN-Rc-JPP" userLabel="Label-全市拥堵指数中文描述">
+                    <rect key="frame" x="0.0" y="500" width="84" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="iKf-sU-XjX"/>
+                        <constraint firstAttribute="width" constant="84" id="rqd-hF-goE"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
+                    <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="OpY-im-BQE" firstAttribute="top" secondItem="cIg-AL-IcJ" secondAttribute="bottom" id="4MH-dY-3qn"/>
-                <constraint firstItem="OpY-im-BQE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="CXg-uZ-eYU"/>
-                <constraint firstItem="OpY-im-BQE" firstAttribute="leading" secondItem="cIg-AL-IcJ" secondAttribute="leading" id="JO8-AF-9pT"/>
-                <constraint firstAttribute="bottom" secondItem="OpY-im-BQE" secondAttribute="bottom" id="KLM-kq-Mgo"/>
-                <constraint firstAttribute="bottom" secondItem="qR9-bU-x8G" secondAttribute="bottom" id="WJk-yA-468"/>
-                <constraint firstAttribute="trailing" secondItem="qR9-bU-x8G" secondAttribute="trailing" id="Wdx-so-LRF"/>
-                <constraint firstItem="OpY-im-BQE" firstAttribute="trailing" secondItem="cIg-AL-IcJ" secondAttribute="trailing" id="XkM-7T-cQC"/>
-                <constraint firstItem="OpY-im-BQE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ocd-TI-pbY"/>
-                <constraint firstAttribute="trailing" secondItem="OpY-im-BQE" secondAttribute="trailing" id="pcs-42-5Jg"/>
+                <constraint firstAttribute="bottom" secondItem="cIg-AL-IcJ" secondAttribute="bottom" constant="1" id="8Wd-pu-ynZ"/>
+                <constraint firstAttribute="bottom" secondItem="rNF-Ah-hun" secondAttribute="bottom" id="9ev-Jz-FH0"/>
+                <constraint firstAttribute="bottom" secondItem="hlD-00-K0x" secondAttribute="bottom" constant="8" id="9md-wd-h1Q"/>
+                <constraint firstAttribute="bottom" secondItem="xUN-Rc-JPP" secondAttribute="bottom" constant="60" id="J7y-3y-Vav"/>
+                <constraint firstItem="xUN-Rc-JPP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Mej-rd-1Je"/>
+                <constraint firstItem="OpY-im-BQE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="TXa-li-pp8"/>
+                <constraint firstAttribute="trailing" secondItem="cIg-AL-IcJ" secondAttribute="trailing" id="ZKS-Kn-u1Z"/>
+                <constraint firstAttribute="trailing" secondItem="OpY-im-BQE" secondAttribute="trailing" id="ajF-1K-NPj"/>
+                <constraint firstItem="OpY-im-BQE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="bam-4T-KBK"/>
+                <constraint firstItem="rNF-Ah-hun" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="goL-JR-tLb"/>
+                <constraint firstAttribute="bottom" secondItem="OpY-im-BQE" secondAttribute="bottom" id="odb-g2-Wjs"/>
+                <constraint firstItem="hlD-00-K0x" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="r0c-1F-aLS"/>
+                <constraint firstItem="cIg-AL-IcJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vGX-JL-0Fp"/>
             </constraints>
             <point key="canvasLocation" x="240" y="265"/>
         </view>
     </objects>
     <resources>
-        <image name="OnStateButtonImage" width="56" height="56"/>
         <image name="clear" width="32" height="32"/>
         <image name="clearX" width="32" height="32"/>
         <image name="exit" width="32" height="32"/>
